# kagomma

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.yml
backend/: .env.sample  Dockerfile  Makefile  README.md  app.py  pyproject.toml  test.py  util.py
frontend/: .gitignore  .prettierignore  Dockerfile  README.md  nuxt.config.js  package.json  pnpm-lock.yaml
frontend/content/: about.md
frontend/layouts/: default.vue
frontend/pages/: about.vue  index.vue
frontend/plugins/: analytics.js
web/: Dockerfile  Dockerfile_local  nginx.conf  server.conf  server.local.conf
